# flask-notion

./: pyproject.toml  testing.ipynb
src/: __init__.py
src/app/: __init__.py  forms.py  views.py
src/app/templates/: base.html  submit_form.html
