[tool.poetry]
name = "flask-notion"
version = "0.1.0"
description = "integrates notion and flask"
authors = ["Hugo <hugo.evers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.10"
Flask = "^2.0.1"
pydantic = {git = "https://github.com/PrettyWood/pydantic.git", rev = "field-property"}
notional = "^0.0.7"
Bootstrap-Flask = "^1.8.0"
flask-ngrok = "^0.0.25"
Flask-WTF = "^0.15.1"
yarl = "^1.6.3"
notion-client = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyter-dash = "^0.4.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
